load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "collection_properties_gen",
    src = "collection_properties.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "collection_properties",
    srcs = [
        ":collection_properties_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "import_collection_coordinator",
    srcs = [
        "import_collection_coordinator.cpp",
    ],
    hdrs = [
        "import_collection_coordinator.h",
    ],
    deps = [
        "//src/mongo:base",  # TODO(SERVER-93876): Remove.
        "//src/mongo/db:service_context",
        "//src/mongo/db/index_builds:commit_quorum_options",  # TODO(SERVER-93876): Remove.
        "//src/mongo/db/repl:repl_coordinator_interface",  # TODO(SERVER-93876): Remove.
    ],
)

mongo_cc_library(
    name = "export_collection",
    srcs = [
        "export_collection.cpp",
    ],
    hdrs = [
        "export_collection.h",
    ],
    target_compatible_with = select({
        "//bazel/config:use_wiredtiger_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "collection_properties",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context",
        "//src/mongo/db:shard_role",
        "//src/mongo/db/catalog:index_catalog",
        "//src/mongo/db/storage:durable_catalog",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
    ],
)

mongo_cc_library(
    name = "import_collection",
    srcs = [
        "import_collection.cpp",
    ],
    hdrs = [
        "import_collection.h",
    ],
    target_compatible_with = select({
        "//bazel/config:use_wiredtiger_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "collection_properties",
        "import_collection_coordinator",
        "//src/mongo:base",
        "//src/mongo/db:audit",
        "//src/mongo/db:multitenancy",
        "//src/mongo/db:service_context",
        "//src/mongo/db:shard_role",
        "//src/mongo/db/catalog:collection_options",
        "//src/mongo/db/concurrency:exception_util",
        "//src/mongo/db/modules/enterprise/src/audit:audit_enterprise",
        "//src/mongo/db/op_observer",
        "//src/mongo/db/repl:oplog",
        "//src/mongo/db/repl:repl_coordinator_interface",
        "//src/mongo/db/stats:top",
        "//src/mongo/db/storage:durable_catalog",
        "//src/mongo/db/storage:storage_engine_impl",
        "//src/mongo/db/storage:storage_options",
        "//src/mongo/db/storage/wiredtiger:storage_wiredtiger_core",
        "//src/mongo/idl:cluster_parameter_synchronization_helpers",
    ],
)
