load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "magic_restore_options_gen",
    src = "magic_restore_options.idl",
)

idl_generator(
    name = "magic_restore_structs_gen",
    src = "magic_restore_structs.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/commands:user_management_commands_gen",
        "//src/mongo/db/repl:repl_set_config_gen",
        "//src/mongo/db/s:type_shard_identity_gen",
        "//src/mongo/s:sharding_types_gen",
    ],
)
