load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "magic_restore_options_gen",
    src = "magic_restore_options.idl",
)

idl_generator(
    name = "magic_restore_structs_gen",
    src = "magic_restore_structs.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/commands:user_management_commands_gen",
        "//src/mongo/db/repl:repl_set_config_gen",
        "//src/mongo/db/s:type_shard_identity_gen",
        "//src/mongo/s:sharding_types_gen",
    ],
)

mongo_cc_library(
    name = "magic_restore",
    srcs = [
        "magic_restore.cpp",
        "magic_restore_options_gen",
        "magic_restore_structs_gen",
    ],
    hdrs = [
        "magic_restore.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:dbhelpers",
        "//src/mongo/db:mongod_options",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context",
        "//src/mongo/db:shard_role",
        "//src/mongo/db/collection_crud",
        "//src/mongo/db/commands:servers",
        "//src/mongo/db/commands:umc_commands_idl",
        "//src/mongo/db/concurrency:exception_util",
        "//src/mongo/db/repl:oplog_entry",
        "//src/mongo/db/repl:replica_set_messages",
        "//src/mongo/db/repl:replication_process",
        "//src/mongo/db/repl:storage_interface",
        "//src/mongo/db/s:sharding_catalog_manager",
        "//src/mongo/db/storage:record_store_base",
        "//src/mongo/util/options_parser",
    ],
)
