load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "oidc_commands_gen",
    src = "oidc_commands.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "oidc_parameters_gen",
    src = "oidc_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "sasl_aws_server_options_gen",
    src = "sasl_aws_server_options.idl",
)

idl_generator(
    name = "auth_delay_gen",
    src = "auth_delay.idl",
)

mongo_cc_library(
    name = "auth_delay",
    srcs = [
        ":auth_delay_gen",
    ],
    hdrs = [
        ":auth_delay_gen",
        "//src/mongo/base:error_codes_header",
        "//src/mongo/db/auth:sasl_options.h",
        "//src/mongo/util/version:releases_header",
    ],
    deps = [
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth:sasl_options",
    ],
)
