load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "oidc_commands_gen",
    src = "oidc_commands.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "oidc_parameters_gen",
    src = "oidc_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "sasl_aws_server_options_gen",
    src = "sasl_aws_server_options.idl",
)

idl_generator(
    name = "auth_delay_gen",
    src = "auth_delay.idl",
)

mongo_cc_library(
    name = "auth_delay",
    srcs = [
        ":auth_delay_gen",
    ],
    hdrs = [
        ":auth_delay_gen",
        "//src/mongo/base:error_codes_header",
        "//src/mongo/db/auth:sasl_options.h",
        "//src/mongo/util/version:releases_header",
    ],
    deps = [
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth:sasl_options",
    ],
)

mongo_cc_library(
    name = "sasl_aws_server",
    srcs = [
        "sasl_aws_server_protocol.cpp",
    ],
    hdrs = [
        "sasl_aws_server_protocol.h",
        "//src/mongo/base:data_type_validated.h",
        "//src/mongo/client:sasl_aws_protocol_common.h",
        "//src/mongo/rpc:object_check.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/bson:bson_validate",
        "//src/mongo/client:sasl_aws_common",
        "//src/mongo/db:connection_health_metrics_parameter",
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "mongosaslserversession",
    srcs = [
        "canon_mongodb_internal.cpp",
        "sasl_aws_server_conversation.cpp",
        "sasl_aws_server_options_gen",
    ] + select({
        "@platforms//os:windows": [
            "auxprop_mongodb_internal.cpp",
            "mongo_sspi.cpp",
        ],
        "//conditions:default": ["mongo_gssapi.cpp"],
    }),
    hdrs = [
        "mongo_gssapi.h",
        "sasl_aws_server_conversation.h",
    ] + select({
        "@platforms//os:windows": ["cyrus_sasl_authentication_session.h"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:windows": [
            "secur32.lib",
            "sasl2.lib",
        ],
        "//conditions:default": [
            "-lgssapi_krb5",
            "-lsasl2",
        ],
    }),
    deps = [
        "sasl_aws_server",
        "//src/mongo/db:service_context",
        "//src/mongo/db/auth:saslauth",
        "//src/mongo/util/net:http_client",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": ["//src/mongo/db/modules/enterprise/src/util:gssapi_helpers"],
    }),
)

mongo_cc_library(
    name = "mongosaslservercommon",
    srcs = [
        "cyrus_sasl_authentication_session.cpp",
        "ldap_sasl_authentication_session.cpp",
    ],
    hdrs = [
        "cyrus_sasl_authentication_session.h",
        "//src/mongo/db:catalog_raii.h",
        "//src/mongo/db:db_raii.h",
        "//src/mongo/db/auth:authz_session_external_state_mock.h",
        "//src/mongo/db/catalog:local_oplog_info.h",
        "//src/mongo/db/stats:operation_latency_histogram.h",
        "//src/mongo/db/stats:top.h",
    ],
    linkopts = select({
        "@platforms//os:windows": [
            "secur32.lib",
            "sasl2.lib",
        ],
        "//conditions:default": [
            "-lgssapi_krb5",
            "-lsasl2",
        ],
    }),
    deps = [
        ":mongosaslserversession",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_manager",
        "//src/mongo/db/modules/enterprise/src/ldap:ldap_name_map",
        "//src/mongo/db/query/query_stats",
    ],
)
