load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "gssapi_helpers",
    srcs = [
        "gssapi_helpers.cpp",
    ],
    hdrs = [
        "gssapi_helpers.h",
    ],
    linkopts = [
        "-lgssapi_krb5",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo:base",
    ],
)

mongo_cc_library(
    name = "report_tool",
    srcs = [
        "report.cpp",
    ],
    hdrs = [
        "report.h",
    ],
    deps = [
        "//src/mongo:base",
    ],
)

mongo_cc_library(
    name = "core_options_stub",
    srcs = [
        "core_options_stub.cpp",
    ],
    deps = [
        "//src/mongo:base",
    ],
)
