load("//bazel:mongo_src_rules.bzl", "mongo_cc_library", "mongo_cc_unit_test")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "query_analysis",
    srcs = [
        "agg_expression_encryption_intender_base.cpp",
        "aggregate_expression_intender.cpp",
        "aggregate_expression_intender_entry.cpp",
        "aggregate_expression_intender_range.cpp",
        "collator_factory_cryptd.cpp",
        "encryption_schema_tree.cpp",
        "expression_schema_walker.cpp",
        "fle_match_expression.cpp",
        "fle_pipeline.cpp",
        "query_analysis.cpp",
        "resolved_encryption_info.cpp",
    ],
    hdrs = [
        "agg_expression_encryption_intender_base.h",
        "aggregate_expression_intender.h",
        "aggregate_expression_intender_entry.h",
        "aggregate_expression_intender_range.h",
        "encryption_schema_tree.h",
        "encryption_update_visitor.h",
        "fle_match_expression.h",
        "fle_pipeline.h",
        "query_analysis.h",
        "resolved_encryption_info.h",
        "//src/mongo/db/pipeline:pipeline_metadata_tree.h",
        "//src/mongo/s/commands:sharding_expressions.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/crypto:encrypted_field_config",
        "//src/mongo/crypto:fle_crypto",
        "//src/mongo/crypto:fle_fields",
        "//src/mongo/db:coll_mod_command_idl",
        "//src/mongo/db:commands",
        "//src/mongo/db:index_commands_idl",
        "//src/mongo/db:query_exec",
        "//src/mongo/db:query_expressions",
        "//src/mongo/db:shard_role_api",
        "//src/mongo/db/commands:create_command",
        "//src/mongo/db/commands/query_cmd:bulk_write_common",
        "//src/mongo/db/pipeline",
        "//src/mongo/db/pipeline:accumulator",
        "//src/mongo/db/pipeline:change_stream_pipeline",
        "//src/mongo/db/query:command_request_response",
        "//src/mongo/db/query:query_planner",
        "//src/mongo/db/query:query_request",
        "//src/mongo/db/query/write_ops:write_ops_parsers",
        "//src/mongo/db/update:update_driver",
        "//src/mongo/util:pcre_wrapper",
    ],
)

mongo_cc_unit_test(
    name = "enterprise_fle_query_analysis_test",
    srcs = [
        "aggregate_expression_intender_range_test.cpp",
        "aggregate_expression_intender_test.cpp",
        "encryption_schema_tree_test.cpp",
        "expression_analysis_test.cpp",
        "fle2_test_fixture.cpp",
        "fle2_test_fixture.h",
        "fle_match_expression_test.cpp",
        "fle_pipeline_test.cpp",
        "fle_test_fixture.cpp",
        "fle_test_fixture.h",
        "query_analysis_test.cpp",
    ],
    tags = ["mongo_unittest_fourth_group"],
    deps = [
        ":query_analysis",
        "//src/mongo/db:service_context_non_d",
        "//src/mongo/db:service_context_test_fixture",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/pipeline:aggregation_context_fixture",
        "//src/mongo/db/query:query_test_service_context",
        "//src/mongo/idl:server_parameter_test_util",
    ],
)
