load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "implicit_encrypted_dbclient",
    srcs = [
        "implicit_encrypted_dbclient.cpp",
    ],
    copts = select({
        "@platforms//os:windows": [
            "/Zc:preprocessor",
            "/wd5104",
            "/wd5105",
        ],
        "//conditions:default": [
            "-Wno-unknown-warning-option",
            # TODO(SERVER-77205): Review and Possibly Remove '-Wno-deprecated' After Mozjs Update
            "-Wno-deprecated",
        ],
    }),
    features = select({
        # TODO(SERVER-59992): Remove -Wno-class-memaccess where possible.
        "//bazel/config:compiler_type_gcc": ["no_class_memaccess_warning"],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "//bazel/config:js_engine_mozjs": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/crypto:aead_encryption",
        "//src/mongo/crypto:fle_crypto",
        "//src/mongo/crypto:fle_fields",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db/auth:security_token_auth",
        "//src/mongo/db/modules/enterprise/src/fle/query_analysis",
        "//src/mongo/scripting",
        "//src/mongo/shell:encrypted_dbclient",
        "//src/third_party/mozjs",
    ],
)
