load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "import_collection_gen",
    src = "import_collection.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/modules/enterprise/src/live_import:collection_properties_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "export_collection_gen",
    src = "export_collection.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "vote_commit_import_collection_gen",
    src = "vote_commit_import_collection.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
        "//src/mongo/util/net:hostandport_gen",
    ],
)
