load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

mongo_cc_library(
    name = "blockstore",
    srcs = [
        "blockstore_http.cpp",
        "list_dir.cpp",
        "reader_writer.cpp",
    ],
    hdrs = [
        "blockstore_http.h",
        "context.h",
        "list_dir.h",
        "reader_writer.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/bson/util:bson_extract",
        "//src/mongo/util/net:http_client",
    ],
)
