load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "stream_ops_gen",
    src = "stream_ops.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:common_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:exec_internal_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:stages_gen",
        "//src/mongo/db/query:cursor_response_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)
