load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "stream_ops_gen",
    src = "stream_ops.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:common_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:exec_internal_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:stages_gen",
        "//src/mongo/db/query/client_cursor:cursor_response_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

mongo_cc_library(
    name = "streams_ops_idl",
    srcs = [
        ":stream_ops_gen",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_exec_common_idl",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_exec_internal_idl",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_stages_idl",
        "//src/mongo/idl:idl_parser",
    ],
)
