load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "stream_ops_gen",
    src = "stream_ops.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:common_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:exec_internal_gen",
        "//src/mongo/db/modules/enterprise/src/streams/exec:stages_gen",
        "//src/mongo/db/query/client_cursor:cursor_response_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

mongo_cc_library(
    name = "streams_ops_idl",
    srcs = [
        ":stream_ops_gen",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_exec_common_idl",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_exec_internal_idl",
        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_stages_idl",
        "//src/mongo/idl:idl_parser",
    ],
)

mongo_cc_library(
    name = "streams_commands",
    srcs = [
        "get_feature_flags.cpp",
        "get_metrics.cpp",
        "get_more_stream_sample.cpp",
        "get_stats.cpp",
        "insert.cpp",
        "list_stream_processors.cpp",
        "send_event.cpp",
        "start_stream_processor.cpp",
        "start_stream_sample.cpp",
        "stop_stream_processor.cpp",
        "update_feature_flags.cpp",
        "write_checkpoint.cpp",
    ],
    hdrs = [
        "//src/mongo/db/modules/enterprise/src/streams/exec:constants.h",
        "//src/mongo/db/pipeline:document_source_mock_stages.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "streams_ops_idl",
        "//src/mongo:base",
        "//src/mongo/client:clientdriver_minimal",
        "//src/mongo/db:commands",
        "//src/mongo/db/modules/enterprise/src/streams/management:streams_management",
        "//src/mongo/idl:idl_parser",
    ],
)
